<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:id="@+id/main_layout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:textSize="20dp"
        android:textColor="#FF5511"
        android:id="@+id/tv_status"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/tv_status"
        android:textSize="20dp"
        android:textColor="#FF5511"
        android:id="@+id/tv_block_num"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:id="@+id/tv_brightness"
        android:textColor="#FF5511"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_status"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textSize="15dp"
        android:text="@string/p_sensor_vibrator_threshold"
        android:id="@+id/tv_vibrator"
        android:textColor="#FF5511"
        android:layout_marginTop="100dp"
        android:layout_below="@+id/tv_brightness"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="70dp"
        android:layout_marginBottom="10dp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textSize="15dp"
        android:inputType="phone|number"
        android:id="@+id/ed_vibrator"
        android:textColor="#FF5511"
        android:layout_toRightOf="@+id/tv_vibrator"
        android:layout_alignTop="@+id/tv_vibrator"
        android:layout_marginTop="-12dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textSize="15dp"
        android:text="@string/p_sensing_threshold"
        android:id="@+id/tv_sensing_threshold"
        android:textColor="#FF5511"
        android:layout_below="@+id/ed_vibrator"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="70dp"
        android:layout_marginBottom="10dp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textSize="15dp"
        android:inputType="phone|number"
        android:id="@+id/ed_sensing_threshold"
        android:textColor="#FF5511"
        android:layout_toRightOf="@+id/tv_sensing_threshold"
        android:layout_alignTop="@+id/tv_sensing_threshold"
        android:layout_marginTop="-12dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textSize="15dp"
        android:text="@string/p_sensing_upper_threshold"
        android:id="@+id/tv_sensing_threshold_upper"
        android:textColor="#FF5511"
        android:layout_below="@+id/ed_sensing_threshold"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="70dp"
        android:layout_marginBottom="10dp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textSize="15dp"
        android:inputType="phone|number"
        android:id="@+id/ed_sensing_threshold_upper"
        android:textColor="#FF5511"
        android:layout_toRightOf="@+id/tv_sensing_threshold_upper"
        android:layout_alignTop="@+id/tv_sensing_threshold_upper"
        android:layout_marginTop="-12dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textSize="15dp"
        android:text="@string/p_sensing_proximity_debug"
        android:id="@+id/tv_sensing_proximity_debug"
        android:textColor="#FF5511"
        android:layout_below="@+id/ed_sensing_threshold_upper"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="70dp"
        android:layout_marginBottom="10dp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textSize="15dp"
        android:id="@+id/ed_sensing_proximity_debug"
        android:textColor="#FF5511"
        android:layout_toRightOf="@+id/tv_sensing_proximity_debug"
        android:layout_alignTop="@+id/tv_sensing_proximity_debug"
        android:layout_marginTop="-12dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textSize="15dp"
        android:text="@string/p_sensing_proximity_value"
        android:id="@+id/tv_sensing_proximity_value"
        android:textColor="#FF5511"
        android:layout_below="@+id/ed_sensing_proximity_debug"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="70dp"
        android:layout_marginBottom="10dp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textSize="15dp"
        android:id="@+id/ed_sensing_proximity_value"
        android:textColor="#FF5511"
        android:layout_toRightOf="@+id/tv_sensing_proximity_value"
        android:layout_alignTop="@+id/tv_sensing_proximity_value"
        android:layout_marginTop="-12dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textSize="15dp"
        android:text="@string/p_sensing_proximity_bl_update"
        android:id="@+id/tv_sensing_proximity_bl_update"
        android:textColor="#FF5511"
        android:layout_below="@+id/ed_sensing_proximity_value"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="70dp"
        android:layout_marginBottom="10dp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textSize="15dp"
        android:id="@+id/ed_sensing_proximity_bl_update"
        android:textColor="#FF5511"
        android:layout_toRightOf="@+id/tv_sensing_proximity_bl_update"
        android:layout_alignTop="@+id/tv_sensing_proximity_bl_update"
        android:layout_marginTop="-12dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_sensing_proximity_bl_update"
        android:id="@+id/bt_reset"
        android:text="reset update"/>

</RelativeLayout>